Use quotes around title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: dleidert/jekyll-wgdd
-title: [erfahrungen, meinungen, halluzinationen]
-description: ein kleines, privates blog
+title: "[erfahrungen, meinungen, halluzinationen]"
+description: "ein kleines, privates blog"
 lang: en
 
 author: Daniel Leidert
