Add CSS base infrastructure

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ google_analytics: false
 google_site_verification: false
 
 jekyll_wgdd:
+  skin: 'default'
   mobile:
   - theme_color: "#FF00FF"
 
