Try to fix variable usage

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ google_site_verification: false
 jekyll_wgdd:
   skin: 'default'
   mobile:
-  - theme_color: "#FF00FF"
+    theme_color: "#FF00FF"
 
 include:
 - .htaccess
