Add some basic contact structure

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,5 +24,8 @@ header:
 
 footer:
 - title: Kontakt
+  url: /contact/#kontakt
 - title: DSGVO
+  url: /contact/#dsgvo
 - title: Impressum
+  url: /contact/#impressum
