--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,13 @@ language: ruby
 
 sudo: false
 
-cache: bundler
+cache:
+  apt: true
+  bundler: true
+
+notifications:
+  email:
+    on_success: never
 
 branches:
   only:
@@ -10,7 +16,36 @@ branches:
   - gh-pages
 
 rvm:
-- 2.4
+- 2.3
+- 2.4.1
 - 2.5
 
-script: bundle exec jekyll build
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+
+matrix:
+  include:
+  - if: branch = gh-pages
+    gemfile: Gemfile.pages
+    cache:
+      directories:
+      - $TRAVIS_BUILD_DIR/tmp/.htmlproofer
+    addons:
+      apt:
+        packages: libcurl4-openssl-dev
+    env:
+    - JEKYLL_ENV=production
+    script: 
+    - bundle exec jekyll build --trace
+    - bundle exec htmlproofer ./_site
+      --check-external-hash
+      --check-opengraph
+      --check-sri
+      --check-html
+      --check-img-http
+      --enforce-https
+      --timeframe 6w
+  - if: branch = master
+    before_install: gem update --system
+    before_script: bundle update
