Change email to webmaster address

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ lang: en
 show_excerpts: false
 
 author: Daniel Leidert
-email: daniel.leidert@wgdd.de
+email: webmaster@wgdd.de
 
 google_analytics: false
 google_site_verification: false
