--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,6 @@ collections:
 plugins:
 - jekyll-feed
 - jekyll-paginate
-#- jekyll-redirect-from
+- jekyll-redirect-from
 - jekyll-seo-tag
 - jekyll-sitemap
